[package]
name = "commute-tracker-api"
version = "0.0.1"
authors = ["Chris Thorn <chris@thorn.co>"]

[dependencies.postgres]
version = "0.8"
features = ["time"]

[dependencies.time]
version = "0.1"

[dependencies.nickel]
version = "0.2"

[dependencies.nickel_macros]
version = "0.1"

[dependencies.rustc-serialize]
version = "0.3"
